Clari copilot API support with Integration template (#1612)
* Add support for clari-copilot and an integration template

* fix flows

* fix docs

* review

--- a/docs-v2/integration-templates/overview.mdx
+++ b/docs-v2/integration-templates/overview.mdx
@@ -85,6 +85,10 @@ As Nango and its community expand, we're looking forward to offering hundreds of
     Sync Asana tasks
   </Card>
 
+  <Card title="Clari Copilot" href="/integration-templates/clari-copilot" icon="chart-simple">
+    Sync Clari Copilot calls
+  </Card>
+
   <Card title="GitHub" href="/integration-templates/github" icon="github" iconType="brands">
     Sync GitHub issues, files. Write files.
   </Card>
