--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -10,6 +10,7 @@ sidebarTitle: Marketing
 
 <CardGroup cols={4}>
     <Card title="Facebook" href="/integrations/all/facebook" color="#68a063" />
+    <Card title="Clari Copilot" href="/integrations/all/clari-copilot" color="#68a063" />
     <Card title="HighLevel" href="/integrations/all/highlevel" color="#68a063" />
     <Card title="Hubspot" href="/integrations/all/hubspot" color="#68a063" />
     <Card title="Instagram" href="/integrations/all/instagram" color="#68a063" />
