Added support for AWS (#1563)
* Added support for amazoncognito

* review

---------

Co-authored-by: Bastien Beurier <bastienbeurier@gmail.com>

--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -10,6 +10,7 @@ sidebarTitle: Developer Tools
 
 <CardGroup cols={4}>
     <Card title="Amazon" href="/integrations/all/amazon" color="#68a063" />
+    <Card title="AWS" href="/integrations/all/aws" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Bitbucket" href="/integrations/all/bitbucket" color="#68a063" />
     <Card title="Digital Ocean" href="/integrations/all/digitalocean" color="#68a063" />
