feat(integrations):integration template for hibob

--- a/docs-v2/integration-templates/overview.mdx
+++ b/docs-v2/integration-templates/overview.mdx
@@ -113,6 +113,10 @@ As Nango and its community expand, we're looking forward to offering hundreds of
     Sync Pipedrive activities, deals, organizations and persons
   </Card>
 
+  <Card title="HiBob" href="/integration-templates/hibob" icon="B">
+    Sync HiBob employees
+  </Card>
+
   <Card title="Bamboohr" href="/integration-templates/bamboohr" icon="user">
     Sync Bamboohr employees and create a new employee
   </Card>
