--- a/docs-v2/integration-templates/overview.mdx
+++ b/docs-v2/integration-templates/overview.mdx
@@ -113,6 +113,10 @@ As Nango and its community expand, we're looking forward to offering hundreds of
     Sync Pipedrive activities, deals, organizations and persons
   </Card>
 
+  <Card title="Ashby" href="/integration-templates/ashby" icon="user-plus">
+    Sync Ashby candidates and jobs. Action to create an application and a note on a candidate
+  </Card>
+
   <Card title="Bamboohr" href="/integration-templates/bamboohr" icon="user">
     Sync Bamboohr employees and create a new employee
   </Card>
