feat(integrations):add support and integration for nextcloud (#1635)
* feat(integrations):add support and integration for nextcloud

* fix

--- a/docs-v2/integration-templates/overview.mdx
+++ b/docs-v2/integration-templates/overview.mdx
@@ -121,6 +121,10 @@ As Nango and its community expand, we're looking forward to offering hundreds of
     Sync Bamboohr employees and create a new employee
   </Card>
 
+  <Card title="NextCloud" href="/integration-templates/next-cloud" icon="box-archive">
+    Sync NextCloud users' details
+  </Card>
+
   <Card title="Workable" href="/integration-templates/workable" icon="list-check">
     Sync workable candidates, candidate activities, jobs, candidates for the specified job, questions for the specified job, and members. Actions to create candidate for the job and comment on the candidate.
   </Card>
