feat(integrations):add integration templates for ashby (#1637)
* feat(integrations):add integration templates for ashby

* prettier-format

* fix(limit value):added a limit value

---------

Co-authored-by: Bastien Beurier <bastienbeurier@gmail.com>

--- a/docs-v2/integration-templates/overview.mdx
+++ b/docs-v2/integration-templates/overview.mdx
@@ -113,6 +113,8 @@ As Nango and its community expand, we're looking forward to offering hundreds of
     Sync Pipedrive activities, deals, organizations and persons
   </Card>
 
+  <Card title="Ashby" href="/integration-templates/ashby" icon="user-plus">
+    Sync Ashby candidates and jobs. Action to create an application and a note on a candidate
   <Card title="HiBob" href="/integration-templates/hibob" icon="B">
     Sync HiBob employees
   </Card>
