--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -10,6 +10,7 @@ sidebarTitle: Developer Tools
 
 <CardGroup cols={4}>
     <Card title="Amazon" href="/integrations/all/amazon" color="#68a063" />
+    <Card title="Apple AppStore" href="/integrations/all/apple-app-store" color="#68a063" />
     <Card title="AWS" href="/integrations/all/aws" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Bitbucket" href="/integrations/all/bitbucket" color="#68a063" />
