Update docs links in webapp

--- a/docs-v2/customize/guides/contribute-an-api.mdx
+++ b/docs-v2/customize/guides/contribute-an-api.mdx
@@ -47,7 +47,7 @@ If all goes well, you should see your new connection in the _Connections_ tab. C
 
 # Document the API
 
-Add a `<api>.mdx` file (e.g. `github.mdx`) for you API to the `docs-v2/integrations/all` folder. Check out [other examples](https://docs.nango.dev/integrations) to fill out the content of the documentation page.
+Add a `<api>.mdx` file (e.g. `github.mdx`) for you API to the `docs-v2/integrations/all` folder. Check out [other examples](/integrations) to fill out the content of the documentation page.
 
 Reference the page in the `docs-v2/mint.json` file in the `Supported APIs` group in alphabetical order.
 
