--- a/docs-v2/introduction.mdx
+++ b/docs-v2/introduction.mdx
@@ -69,6 +69,6 @@ Our mission is to enable all SaaS to seamlessly integrate together. By being ope
 
 # 📚 Learn more
 
-- [Learn how to integrate Nango](https://docs.nango.dev/integrate/overview)
+- [Learn how to integrate Nango](/integrate/overview)
 - [Asks questions on the community](https://nango.dev/slack)
 - [Book a demo](https://calendly.com/rguldener/30min)
