Better message on empty pages

--- a/docs-v2/customize/guides/advanced/validate-api-responses.mdx
+++ b/docs-v2/customize/guides/advanced/validate-api-responses.mdx
@@ -5,5 +5,5 @@ description: 'Step-by-step guide on how to validate API responses at runtime.'
 ---
 
 <Info>
-Step-by-step guide coming soon!
+The docs recently underwent a makeover, leaving this page empty. We are working hard to fill in all the missing pages within the next two weeks. Meanwhile, ask any questions on the [community](https://nango.dev/slack).
 </Info>
