--- a/docs-v2/reference/ui.mdx
+++ b/docs-v2/reference/ui.mdx
@@ -5,5 +5,5 @@ icon: 'desktop'
 ---
 
 <Info>
-Reference coming soon!
+The docs recently underwent a makeover, leaving this page empty. We are working hard to fill in all the missing pages within the next two weeks. Meanwhile, ask any questions on the [community](https://nango.dev/slack).
 </Info>
