--- a/docs-v2/understand/concepts/templates.mdx
+++ b/docs-v2/understand/concepts/templates.mdx
@@ -5,5 +5,5 @@ description: 'Learn more about integration templates.'
 ---
 
 <Info>
-Documentation coming soon!
+The docs recently underwent a makeover, leaving this page empty. We are working hard to fill in all the missing pages within the next two weeks. Meanwhile, ask any questions on the [community](https://nango.dev/slack).
 </Info>
