Improve docs reference navigation

--- a/docs-v2/reference/overview.mdx
+++ b/docs-v2/reference/overview.mdx
@@ -3,6 +3,8 @@ title: 'Overview'
 sidebarTitle: 'Overview'
 ---
 
+# Use Integrations
+
 ### HTTP API & Backend SDKs
 
 Sync APIs from your app with the Nango HTTP API & backend SDKs.
@@ -26,25 +28,30 @@ Sync APIs from your app with the Nango HTTP API & backend SDKs.
     </Card>
 </CardGroup>
 
-### Other references
+### Other References
 
 <CardGroup cols={2}>
     <Card title="Frontend" href="/reference/sdks/frontend" icon="js" color="#F7D300">
         Trigger authorization flows in your frontend.
     </Card>
+    <Card title="Webhooks" href="/reference/webhooks" icon="webhook" color="#F7D300">
+        Support real-time syncing with APIs. 
+    </Card>
+</CardGroup>
+
+# Build Integrations    
+
+<CardGroup cols={2}>
     <Card title="CLI" href="/reference/cli" icon="terminal" color="#F7D300">
         The tooling your need to develop custom integrations.
     </Card>
-    <Card title="providers.yaml" href="/reference/api-configuration" icon="network-wired" color="#F7D300">
+    <Card title="APIs config (providers.yaml)" href="/reference/api-configuration" icon="network-wired" color="#F7D300">
         How external APIs are configured on Nango.
     </Card>
-    <Card title="nango.yaml" href="/reference/integration-configuration" icon="arrow-right-arrow-left" color="#F7D300">
+    <Card title="Integration config (nango.yaml)" href="/reference/integration-configuration" icon="arrow-right-arrow-left" color="#F7D300">
         How integrations are configured on Nango.
     </Card>
     <Card title="Scripts" href="/reference/scripts" icon="code" color="#F7D300">
         Build custom integrations in code.
-    </Card>
-    <Card title="Webhooks" href="/reference/webhooks" icon="webhook" color="#F7D300">
-        Support real-time syncing with APIs. 
     </Card>
 </CardGroup>
