--- a/docs-v2/integrations/all/apollo.mdx
+++ b/docs-v2/integrations/all/apollo.mdx
@@ -27,6 +27,6 @@ API configuration: [`apollo`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- Coda uses API_KEY auth mode with query param: Param `api_token` in the request url to access different endpoints.
+- Apollo uses API_KEY auth mode with query param: Param `api_token` in the request url to access different endpoints.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/apollo.mdx)</Note>
