--- a/docs-v2/integrations/other.mdx
+++ b/docs-v2/integrations/other.mdx
@@ -12,6 +12,7 @@ sidebarTitle: Other
     <Card title="Amazon" href="/integrations/all/amazon" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Auth0" href="/integrations/all/auth0" color="#68a063" />
+    <Card title="Entrata" href="integrations/all/entrata" color="#68a063" />
     <Card title="Exact Online" href="integrations/all/exact-online" color="#68a063" />
     <Card title="Freshservice" href="integrations/all/freshservice" color="#68a063" />
     <Card title="Google" href="/integrations/all/google" color="#68a063" />
