--- a/docs-v2/integrations/all/exist.mdx
+++ b/docs-v2/integrations/all/exist.mdx
@@ -1,9 +1,9 @@
 ---
-title: Auth0
-sidebarTitle: Auth0
+title: Exist
+sidebarTitle: Exist
 ---
 
-API configuration: [`auth0`](https://nango.dev/providers.yaml)
+API configuration: [`exist`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -19,14 +19,15 @@ API configuration: [`auth0`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [How to register an Application](https://auth0.com/docs/get-started/auth0-overview/create-applications)
--   [OAuth-related docs](https://auth0.com/docs/get-started/authentication-and-authorization-flow/call-your-api-using-the-authorization-code-flow)
--   [List of OAuth scopes](https://auth0.com/docs/get-started/apis/scopes/)
+-   [How to register an Application](https://developer.exist.io/reference/authentication/oauth2/#overview)
+-   [OAuth-related docs](https://developer.exist.io/reference/authentication/oauth2/)
+-   [List of OAuth scopes](https://developer.exist.io/reference/authentication/oauth2/#scopes)
+-   [Web API docs (their REST API)](https://developer.exist.io/reference/attributes/)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
 
--   To get refresh_token, you will need to add **`offline_access`** to the list of your scopes.
+The lifetime of an access token is an year
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/auth0.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/exist.mdx)</Note>
