--- a/docs-v2/integrations/crm.mdx
+++ b/docs-v2/integrations/crm.mdx
@@ -27,6 +27,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
 ## CRM APIs supported by Nango
 
 <CardGroup cols={4}>
+    <Card title="Attio" href="/integrations/all/attio" color="#68a063" />
     <Card title="Blackbaud" href="/integrations/all/blackbaud" color="#68a063" />
     <Card title="Close" href="/integrations/all/close" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
@@ -42,6 +43,6 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
 
 <Tip>
     Missing a CRM API?
-    
+
     We can add new APIs within 24h, just ask us on the [community](https://nango.dev/slack). Or you can also [contribute it](/customize/guides/contribute-an-api) yourself.
 </Tip>
