--- a/docs-v2/integrations/sports.mdx
+++ b/docs-v2/integrations/sports.mdx
@@ -7,4 +7,5 @@
     <Card title="Fitbit" href="/integrations/all/fitbit" color="#68a063" />
     <Card title="Strava" href="/integrations/all/strava" color="#68a063" />
     <Card title="Twitch" href="/integrations/all/twitch" color="#68a063" />
+    <Card title="Whoop" href="/integrations/all/whoop" color="#68a063" />
 </CardGroup>
