--- a/docs-v2/integrations/all/stripe-app.mdx
+++ b/docs-v2/integrations/all/stripe-app.mdx
@@ -1,9 +1,9 @@
 ---
-title: Stripe
-sidebarTitle: Stripe
+title: Stripe App
+sidebarTitle: Stripe App
 ---
 
-API configuration: [`stripe`](https://nango.dev/providers.yaml)
+API configuration: [`stripe-app`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -25,12 +25,12 @@ API configuration: [`stripe`](https://nango.dev/providers.yaml)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
-## Connection configuration in Nango
+## Connection configuration in Nango for external test apps
 
-Stripe requires you to use either the application domain or a temporary id (in test mode) to identify your application. See the [docs](https://stripe.com/docs/stripe-apps/api-authentication/oauth#install-app) for more information.
+If you are using the "External Test" version of your app, Stripe requires you to use a temporary id to identify your application. See the [docs](https://stripe.com/docs/stripe-apps/api-authentication/oauth#install-app) for more information.
 
-You should add your app domain to the `appDomain` field in the connection params.
+In this case, you must use the `stripe-app-sandbox` integration in Nango, and add the temporary ID to the `appDomain` field in the connection params.
 
 ```js
-nango.auth('stripe-app', '<CONNECTION-ID>', {params: {appDomain: '<stripe-app-domain>'}});
+nango.auth('stripe-app-sandbox', '<CONNECTION-ID>', {params: {appDomain: '<stripe-app-domain>'}});
 ```
