[nan-391] docs update and use v2 as the default

--- a/docs-v2/integrations/all/tiktok-accounts.mdx
+++ b/docs-v2/integrations/all/tiktok-accounts.mdx
@@ -3,7 +3,7 @@ title: TikTok Accounts
 sidebarTitle: TikTok Accounts
 ---
 
-API configuration: [`tiktok`](https://nango.dev/providers.yaml)
+API configuration: [`tiktok-accounts`](https://nango.dev/providers.yaml)
 
 ## Features
 
