--- a/docs-v2/customize/guides/advanced/migrate-integration-configuration.mdx
+++ b/docs-v2/customize/guides/advanced/migrate-integration-configuration.mdx
@@ -8,7 +8,7 @@ Nango created a new integration configuration (`nango.yaml`) schema in February 
 
 To migrate to it: 
 - update the Nango CLI to the latest version
-- in your `nango-integration` folder, run `npm nango migrate-config` (a success message should appear)
+- in your `nango-integration` folder, run `nango migrate-config` (a success message should appear)
 - deploy your integrations with `nango deploy <env>`
 
 
