feat(integrations):add support for pinterest

--- a/docs-v2/integrations/social.mdx
+++ b/docs-v2/integrations/social.mdx
@@ -13,6 +13,7 @@ sidebarTitle: Social
     <Card title="Facebook" href="/integrations/all/facebook" color="#68a063" />
     <Card title="Instagram" href="/integrations/all/instagram" color="#68a063" />
     <Card title="LinkedIn" href="/integrations/all/linkedin" color="#68a063" />
+    <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Reddit" href="/integrations/all/reddit" color="#68a063" />
     <Card title="Splitwise" href="/integrations/all/splitwise" color="#68a063" />
     <Card title="Strava" href="/integrations/all/strava" color="#68a063" />
