--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -10,4 +10,5 @@
     <Card title="Gumroad" href="/integrations/all/gumroad" color="#68a063" />
     <Card title="Miro" href="/integrations/all/miro" color="#68a063" />
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
+    <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
 </CardGroup>
