--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -20,6 +20,7 @@ sidebarTitle: Marketing
     <Card title="Mailchimp" href="/integrations/all/mailchimp" color="#68a063" />
     <Card title="Outreach" href="/integrations/all/outreach" color="#68a063" />
     <Card title="Salesloft" href="/integrations/all/salesloft" color="#68a063" />
+    <Card title="Apollo" href="/integrations/all/apollo" color="#68a063" />
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Sendgrid" href="/integrations/all/sendgrid" color="#68a063" />
     <Card title="Segment" href="/integrations/all/segment" color="#68a063" />
