--- a/docs-v2/integrations/legal.mdx
+++ b/docs-v2/integrations/legal.mdx
@@ -4,6 +4,7 @@
 </Tip>
 
 <CardGroup cols={4}>
+    <Card title="Anrok" href="/integrations/all/anrok" color="#68a063" />
     <Card title="BoldSign" href="/integrations/all/boldsign" color="#68a063" />
     <Card title="DocuSign" href="/integrations/all/docusign" color="#68a063" />
     <Card title="PandaDoc" href="/integrations/all/pandadoc" color="#68a063" />
