feat(integrations):add support for teamtailor api

--- a/docs-v2/integrations/ats.mdx
+++ b/docs-v2/integrations/ats.mdx
@@ -14,5 +14,6 @@ sidebarTitle: ATS
     <Card title="Lever" href="/integrations/all/lever" color="#68a063" />
     <Card title="LinkedIn" href="/integrations/all/linkedin" color="#68a063" />
     <Card title="SmartRecruiters" href="/integrations/all/smartrecruiters" color="#68a063" />
+    <Card title="Teamtailor" href="/integrations/all/teamtailor" color="#68a063" />
     <Card title="Workable" href="/integrations/all/workable" color="#68a063" />
 </CardGroup>
