--- a/docs-v2/integrations/all/anrok.mdx
+++ b/docs-v2/integrations/all/anrok.mdx
@@ -27,5 +27,6 @@ API configuration: [`anrok`](https://nango.dev/providers.yaml)
 ## API gotchas
 
 - Anrok uses API_KEY auth mode with Authorization: Bearer `api_key` in the request header to access different endpoints.
+- The default rate limit for a seller account is 10 requests per second.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/anrok.mdx)</Note>
