[nan-437] fix typo

--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -829,7 +829,7 @@ const res = await nango.get({
             <ResponseField name="params" type="Record<string, string | number>">
                 The query parameters of the request.
             </ResponseField>
-            <ResponseField name="data" type="unkown">
+            <ResponseField name="data" type="unknown">
                 The body of the request.
             </ResponseField>
             <ResponseField name="retries" type="number">
