--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -4,6 +4,44 @@ sidebarTitle: 'Actions'
 description: 'Learn more about actions.'
 ---
 
-<Info>
-The docs recently underwent a makeover, leaving this page empty. We are working hard to fill in all the missing pages within the next two weeks. Meanwhile, ask any questions on the [community](https://nango.dev/slack).
-</Info>
+Actions within Nango are designed to facilitate direct workflows with external APIs, such as creating a contact in Hubspot or sending a message via Slack. Unlike [syncs](understand/concepts/syncs), actions require manual triggering and can provide immediate responses, making them ideally suited for dynamic, real-time interactions.
+
+# Use Cases for Actions
+Actions shine in scenarios requiring two-way syncing or direct data manipulation. For instance, while syncs could be used to regularly import the latest contacts from Hubspot, actions enable the creation or modification of those contacts directly from your application. This capability ensures a seamless flow of information both to and from external services.
+
+# Execution Characteristics
+
+### Transient Execution
+
+Action executions are transient, with no data persistence on Nango's part. This ensures that each action is performed in real-time, with the latest data and without reliance on cached information.
+
+### Defined Inputs and Outputs 
+
+Actions are defined with explicit input parameters and output responses. These schemas are meticulously outlined as models within the [integration configuration](understand/concepts/integration-configuration), ensuring clarity and consistency in data handling.
+
+### Endpoint Access 
+Once enabled, actions are accessible through specific endpoints, each with an automatically generated API reference available in the [Nango UI](understand/concepts/ui). This setup facilitates easy integration and execution of actions within your application.
+
+### Immediate Feedback
+
+The outcomes of action executions, whether errors or successes, are directly relayed in the response to your trigger request. This immediate feedback loop empowers you to handle retries or further processing as needed.
+
+# Distinguishing Features from Proxies
+
+### Script-Driven 
+
+Actions differ significantly from proxies by executing predefined scripts rather than mere individual requests. This allows for complex workflows, involving intricate request orchestration and data transformations, to be executed seamlessly.
+
+### Unified Modeling
+
+Actions support inputs and outputs that adhere to [unified models](understand/concepts/api-unification), streamlining the integration process across different external APIs. This unification greatly simplifies your integration code, reducing complexity and minimizing potential errors.
+
+# Action Scripts
+Action executions are powered by [integration scripts](understand/concepts/scripts) that encapsulate the logic for interfacing with external APIs. While Nango provides [script templates](understand/concepts/templates) for common use cases, there's also support for custom scripting to meet specific integration needs.
+
+# Conclusion
+Actions in Nango provide a robust framework for handling real-time, interactive workflows with external APIs. From two-way syncing to intricate data manipulations, actions offer the flexibility, immediacy, and precision needed to effectively integrate and automate external API interactions within your application. With the added benefits of unified modeling and script-driven logic, Nango actions are an essential tool for developers looking to streamline their application's external integrations.
+
+
+
+
