--- a/docs-v2/understand/concepts/syncs.mdx
+++ b/docs-v2/understand/concepts/syncs.mdx
@@ -4,22 +4,24 @@ sidebarTitle: 'Syncs'
 description: 'Learn more about syncs.'
 ---
 
+# Overview
+
 Syncs in Nango let you continuously synchronize data from external APIs such as Hubspot contacts, Slack messages, etc.
 
-Syncs replicate external data into Nango, according to a predefined schedule. You can subsequently access the data through a unified API to replicate it into your database. Attached to [integrations](understand/concepts/integrations), syncs apply universally across all [connections](understand/concepts/connections) within that integration, ensuring consistent data replication.
+Syncs replicate external data into Nango, according to a predefined schedule. You can subsequently access the data through a unified API to replicate it into your database. Attached to [integrations](/understand/concepts/integrations), syncs apply universally across all [connections](/understand/concepts/connections) within that integration, ensuring consistent data replication.
 
 # Sync records & models
-Syncs are designed to replicate data in a structured manner, transforming it into a list of records that adhere to a predefined model. This model, detailed within the [sync configuration](understand/concepts/integration-configuration), outlines the fields (and their data types) of the output records.
+Syncs are designed to replicate data in a structured manner, transforming it into a list of records that adhere to a predefined model. This model, detailed within the [sync configuration](/understand/concepts/integration-configuration), outlines the fields (and their data types) of the output records.
 
 # Scheduling and execution
-The execution of syncs is based on a schedule that you configure, which can be as frequent as every 5 minutes depending on your plan. Each execution updates the dataset with the latest data from the external API for every connection under the integration. You have the flexibility to start syncs for individual connections or set them to automatically begin for new connections, managed through the [Nango UI](understand/concepts/ui) or [API](reference/overview).
+The execution of syncs is based on a schedule that you configure, which can be as frequent as every 5 minutes depending on your plan. Each execution updates the dataset with the latest data from the external API for every connection under the integration. You have the flexibility to start syncs for individual connections or set them to automatically begin for new connections, managed through the [Nango UI](/understand/concepts/ui) or [API](/reference/overview).
 
 Sync schedules & executions can be actively managed per connection through the Nango UI or API, including starting/pausing schdules & canceling/triggering executions. [Incremental syncs](#incremental-syncs) let you initiate a full refresh, effectively resetting the synced dataset.
 
 # Sync endpoints and data caching
 Enabled syncs provide access to an endpoint for fetching all synced records, stored within a Nango cache. This highly-available caching supports essential syncing mechanisms like data deduplication, change detection, and heavy replications.
 
-Sync endpoints have an automatically-generated [API reference](understand/concepts/integrations#configuration-details) in the Nango UI. 
+Sync endpoints have an automatically-generated [API reference](/understand/concepts/integrations#configuration-details) in the Nango UI. 
 
 # Sync modes: full refresh vs. incremental
 
@@ -32,7 +34,7 @@ Nango leverages the timestamp of the last sync as a cursor for incremental syncs
 
 # Sync webooks
 
-Nango sends [webhooks](understand/concepts/webhooks) upon the completion of sync executions that result in new data. These webhooks allow you to promptly fetch the new records from the sync endpoint. 
+Nango sends [webhooks](/understand/concepts/webhooks) upon the completion of sync executions that result in new data. These webhooks allow you to promptly fetch the new records from the sync endpoint. 
 
 This streamlines the process of reliably replicating data from external APIs to your database, eliminating the need for cron jobs and enabling immediate updates with relevant data as soon as it becomes available.
 
@@ -48,18 +50,18 @@ Deletion detection is straightforward—enable it within the integration configu
 
 **Incremental Syncs**
 
-This method requires a different approach, as the data does not get fully replaced. The sync script must be adjusted to specifically request information on deleted data from the external API and mark the relevant records as deleted. This capability depends on the external API's ability to return information about deletions. Nango's [integration templates](understand/concepts/templates) include examples of scripts designed to handle this scenario.
+This method requires a different approach, as the data does not get fully replaced. The sync script must be adjusted to specifically request information on deleted data from the external API and mark the relevant records as deleted. This capability depends on the external API's ability to return information about deletions. Nango's [integration templates](/understand/concepts/templates) include examples of scripts designed to handle this scenario.
 
 # Error handling
 Failed sync attempts don't automatically retry but will proceed on the next scheduled execution. You have the option to [manually trigger a new execution](#scheduling-and-execution). 
 
 # Sync scripts
 
-Sync executions are driven by [integration scripts](understand/concepts/scripts), which encapsulate the logic for interacting with external APIs, allowing your application to rely on the Nango unified API. Nango provides [script templates](understand/concepts/templates) for standard use cases, but also supports custom scripting for tailored integration needs.
+Sync executions are driven by [integration scripts](/understand/concepts/scripts), which encapsulate the logic for interacting with external APIs, allowing your application to rely on the Nango unified API. Nango provides [script templates](/understand/concepts/templates) for standard use cases, but also supports custom scripting for tailored integration needs.
 
 # API unification
 
-Syncs can have records that conform to a [unified model](understand/concepts/api-unification), regardless of the specific external API they originate from. This unification simplifies your integration code, enabling you to handle data from various sources in a consistent manner, thus reducing complexity and the potential for errors.
+Syncs can have records that conform to a [unified model](/understand/concepts/api-unification), regardless of the specific external API they originate from. This unification simplifies your integration code, enabling you to handle data from various sources in a consistent manner, thus reducing complexity and the potential for errors.
 
 # Conclusion
 Nango's sync feature streamlines the process of keeping your application's data in sync with external APIs, offering structured data transformation, flexible scheduling, and efficient data management mechanisms. 
