Add proxy concept docs + standardize assets

--- a/docs-v2/customize/overview.mdx
+++ b/docs-v2/customize/overview.mdx
@@ -5,7 +5,7 @@ description: 'High-level steps to build a custom integration with Nango.'
 ---
 
 <Frame>
-  <img src="/images/nango-custom-data-flow.png" />
+  <img src="/images/custom-scripts.png" />
 </Frame>
 
 Nango lets you create custom integrations through code. Unlike pre-built integrations, custom integrations provide the flexibility to address unique or complex requirements.
