--- a/docs-v2/integrate/overview.mdx
+++ b/docs-v2/integrate/overview.mdx
@@ -5,7 +5,7 @@ description: 'High-level steps to ship an integration with Nango.'
 ---
 
 <Frame caption="The steps to integrate Nango.">
-  <img src="/images/nango-data-flow.png" />
+  <img src="/images/integrate-nango.png" />
 </Frame>
 
 ## 1. Get user permission in your app
