--- a/docs-v2/understand/architecture.mdx
+++ b/docs-v2/understand/architecture.mdx
@@ -24,6 +24,10 @@ Nango improves the way applications integrate with external APIs by providing a 
 
 # A dual architecture
 
+<Frame>
+  <img src="/images/custom-scripts.png" />
+</Frame>
+
 Nango's architecture can be divided into two main parts: the customer app's interaction with Nango, and Nango's interaction with external APIs. This dual approach is what sets Nango apart, offering unprecedented flexibility and customization.
 
 **Customer app to Nango** 
@@ -35,6 +39,10 @@ Developers use the unified API provided by Nango to interact with various extern
 Here lies Nango's unique value proposition. Unlike traditional unified APIs, Nango allows developers to customize how it interacts with each external API through scripts. This means that while the interface from the app to Nango remains unified, the communication from Nango to external APIs can be tailored to meet specific requirements.
 
 # Detailed architecture
+
+<Frame>
+  <img src="/images/architecture.png" />
+</Frame>
 
 **API**
 
