--- a/docs-v2/understand/concepts/cli.mdx
+++ b/docs-v2/understand/concepts/cli.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'The Nango CLI'
-sidebarTitle: 'The Nango CLI'
+title: 'The CLI'
+sidebarTitle: 'The CLI'
 description: 'Learn more about the Nango CLI.'
 ---
 
