--- a/docs-v2/understand/concepts/integrations.mdx
+++ b/docs-v2/understand/concepts/integrations.mdx
@@ -29,3 +29,7 @@ Beyond authorization, integrations include configurations for how your app uses 
 
 # Flexibility and customization
 Nango stands out by not limiting you to a fixed set of endpoints & use cases. You can customize or extend the provided templates with your own scripts, allowing you to tailor the integration to your specific needs ([overview](/customize/overview)). This approach will enable you to focus on leveraging a unified API through Nango, streamlining the integration process with external services.
+
+# Getting started with using integrations
+
+Check out the authorization [step-by-step guide](/integrate/guides/authorize-an-api) or refer to the reference ([API](/reference/api/integration/list) / [SDK](/reference/sdks/node#integrations)).
