--- a/docs-v2/understand/concepts/syncs.mdx
+++ b/docs-v2/understand/concepts/syncs.mdx
@@ -63,5 +63,6 @@ Sync executions are driven by [integration scripts](/understand/concepts/scripts
 
 Syncs can have records that conform to a [unified model](/understand/concepts/api-unification), regardless of the specific external API they originate from. This unification simplifies your integration code, enabling you to handle data from various sources in a consistent manner, thus reducing complexity and the potential for errors.
 
-# Conclusion
-Nango's sync feature streamlines the process of keeping your application's data in sync with external APIs, offering structured data transformation, flexible scheduling, and efficient data management mechanisms. 
+# Getting started with syncs
+
+Check out the syncs [step-by-step guide](/integrate/guides/sync-data-from-an-api) or refer to the reference ([API](/reference/api/sync/records-list) / [SDK](/reference/sdks/node#syncs)).
